tests/evaluator/should_fail/rectangular_datatype.csp
S = { x.y | x <- {0..3}, y <- {0..3}, x+y < 3 }

datatype Y = X.S

test1 = member(X.0.0, Y)
